// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package de.rki.coronawarnapp.server.protocols.internal.evreg;

import "internal/evreg/event.proto";

message SignedEvent {
  Event event = 1;
  bytes signature = 2;
}